--- a/css/common.css
+++ b/css/common.css
@@ -1,8 +1,8 @@
 :root {
-    --color-bg:#30475E ;
-    --color-primary: #F2A465;
+    --color-bg: #30475e;
+    --color-primary: #f2a465;
     --color-secondary: #232831;
-    --color-white: #ECECEC;
+    --color-white: #ececec;
     --color-black: #000;
     font-size: 16px;
 }
@@ -29,8 +29,8 @@ ul,
 li,
 figure,
 blockquote {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 * {
@@ -50,9 +50,8 @@ body {
         url('/fonts/Mulish-VF_wght.woff2') format('woff2-variations');
     font-weight: 200 900;
     font-style: normal;
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-    U+FEFF, U+FFFD;
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
+        U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
@@ -62,9 +61,8 @@ body {
         url('/fonts/Mulish-Italic-VF_wght.woff2') format('woff2-variations');
     font-weight: 200 900;
     font-style: italic;
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-    U+FEFF, U+FFFD;
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
+        U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 .f1 {
@@ -75,6 +73,7 @@ body {
 .f2 {
     font-size: 1.125rem;
     line-height: 23px;
+    font-weight: 900;
 }
 
 .f3 {
